// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Model E2E Test addRelationship() should create a bi-directional relationship 1`] = `
[
  [
    "region=region,account=account,app=app",
  ],
]
`;

exports[`Model E2E Test addRelationship() should create a bi-directional relationship 2`] = `
[
  [
    "service=service,account=account,app=app",
  ],
]
`;

exports[`Model E2E Test common functions Test {"accountId": "account", "anchors": [Array], "dependencies": [Array]} getAncestors() 1`] = `
[
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"accountId": "account", "anchors": [Array], "dependencies": [Array]} getBoundaryMembers() 1`] = `
[
  "account=account,app=test",
  "app=test",
  "service=service,account=account,app=test",
  "server=backend,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "environment=qa,region=region,account=account,app=test",
  "filesystem=filesystem,region=region,account=account,app=test",
  "pipeline=pipeline,account=account,app=test",
  "image=image:v1,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test {"accountId": "account", "anchors": [Array], "dependencies": [Array]} getChildren() 1`] = `
[
  "image",
  "pipeline",
  "region",
  "server",
  "service",
]
`;

exports[`Model E2E Test common functions Test {"accountId": "account", "anchors": [Array], "dependencies": [Array]} getContext() 1`] = `"account=account,app=test"`;

exports[`Model E2E Test common functions Test {"accountId": "account", "anchors": [Array], "dependencies": [Array]} getParents() 1`] = `
[
  "app",
]
`;

exports[`Model E2E Test common functions Test {"accountId": "account", "anchors": [Array], "dependencies": [Array]} getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"accountId": "account", "anchors": [Array], "dependencies": [Array]} synth() 1`] = `
{
  "accountId": "account",
}
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "deploymentTag": "v1"} getAncestors() 1`] = `
[
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "deploymentTag": "v1"} getBoundaryMembers() 1`] = `
[
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "environment=qa,region=region,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "deploymentTag": "v1"} getChildren() 1`] = `
[
  "execution",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "deploymentTag": "v1"} getContext() 1`] = `"deployment=v1,server=backend,account=account,app=test"`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "deploymentTag": "v1"} getParents() 1`] = `
[
  "server",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "deploymentTag": "v1"} getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "deploymentTag": "v1"} synth() 1`] = `
{
  "deploymentTag": "v1",
}
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "dockerOptions": [Object], "imageId": "image:v1", "imageName": "image", "imageTag": "v1"} getAncestors() 1`] = `
[
  "image=image:v1,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "dockerOptions": [Object], "imageId": "image:v1", "imageName": "image", "imageTag": "v1"} getBoundaryMembers() 1`] = `
[
  "image=image:v1,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "dockerOptions": [Object], "imageId": "image:v1", "imageName": "image", "imageTag": "v1"} getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "dockerOptions": [Object], "imageId": "image:v1", "imageName": "image", "imageTag": "v1"} getContext() 1`] = `"image=image:v1,account=account,app=test"`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "dockerOptions": [Object], "imageId": "image:v1", "imageName": "image", "imageTag": "v1"} getParents() 1`] = `
[
  "account",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "dockerOptions": [Object], "imageId": "image:v1", "imageName": "image", "imageTag": "v1"} getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "dockerOptions": [Object], "imageId": "image:v1", "imageName": "image", "imageTag": "v1"} synth() 1`] = `
{
  "dockerOptions": {
    "dockerfilePath": "/Dockerfile",
  },
  "imageId": "v1",
  "imageName": "image",
  "imageTag": "v1",
}
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentName": "qa", "environmentVariables": [Map]} getAncestors() 1`] = `
[
  "environment=qa,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentName": "qa", "environmentVariables": [Map]} getBoundaryMembers() 1`] = `
[
  "environment=qa,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentName": "qa", "environmentVariables": [Map]} getChildren() 1`] = `
[
  "execution",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentName": "qa", "environmentVariables": [Map]} getContext() 1`] = `"environment=qa,region=region,account=account,app=test"`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentName": "qa", "environmentVariables": [Map]} getParents() 1`] = `
[
  "region",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentName": "qa", "environmentVariables": [Map]} getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentName": "qa", "environmentVariables": [Map]} synth() 1`] = `
{
  "environmentName": "qa",
  "environmentVariables": {},
}
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentVariables": [Map]} getAncestors() 1`] = `
[
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "environment=qa,region=region,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentVariables": [Map]} getBoundaryMembers() 1`] = `
[
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "environment=qa,region=region,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentVariables": [Map]} getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentVariables": [Map]} getContext() 1`] = `"execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test"`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentVariables": [Map]} getParents() 1`] = `
[
  "deployment",
  "environment",
  "subnet",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentVariables": [Map]} getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "environmentVariables": [Map]} synth() 1`] = `
{
  "deployment": {
    "context": "deployment=v1,server=backend,account=account,app=test",
  },
  "environment": {
    "context": "environment=qa,region=region,account=account,app=test",
  },
  "environmentVariables": {},
  "subnet": {
    "context": "subnet=region-public,region=region,account=account,app=test",
  },
}
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "filesystemName": "filesystem"} getAncestors() 1`] = `
[
  "filesystem=filesystem,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "filesystemName": "filesystem"} getBoundaryMembers() 1`] = `
[
  "filesystem=filesystem,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "filesystemName": "filesystem"} getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "filesystemName": "filesystem"} getContext() 1`] = `"filesystem=filesystem,region=region,account=account,app=test"`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "filesystemName": "filesystem"} getParents() 1`] = `
[
  "region",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "filesystemName": "filesystem"} getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "filesystemName": "filesystem"} synth() 1`] = `
{
  "filesystemName": "filesystem",
}
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "instructionSet": [Array], "pipelineName": "pipeline"} getAncestors() 1`] = `
[
  "pipeline=pipeline,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "instructionSet": [Array], "pipelineName": "pipeline"} getBoundaryMembers() 1`] = `
[
  "pipeline=pipeline,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "instructionSet": [Array], "pipelineName": "pipeline"} getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "instructionSet": [Array], "pipelineName": "pipeline"} getContext() 1`] = `"pipeline=pipeline,account=account,app=test"`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "instructionSet": [Array], "pipelineName": "pipeline"} getParents() 1`] = `
[
  "account",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "instructionSet": [Array], "pipelineName": "pipeline"} getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "instructionSet": [Array], "pipelineName": "pipeline"} synth() 1`] = `
{
  "instructionSet": [],
  "pipelineName": "pipeline",
}
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "name": "test"} getAncestors() 1`] = `
[
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "name": "test"} getBoundaryMembers() 1`] = `
[
  "app=test",
  "account=account,app=test",
  "service=service,account=account,app=test",
  "server=backend,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "environment=qa,region=region,account=account,app=test",
  "filesystem=filesystem,region=region,account=account,app=test",
  "pipeline=pipeline,account=account,app=test",
  "image=image:v1,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "name": "test"} getChildren() 1`] = `
[
  "account",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "name": "test"} getContext() 1`] = `"app=test"`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "name": "test"} getParents() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "name": "test"} getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "name": "test"} synth() 1`] = `
{
  "name": "test",
}
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "options": [Object], "subnetId": "region-public", "subnetName": "public"} getAncestors() 1`] = `
[
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "options": [Object], "subnetId": "region-public", "subnetName": "public"} getBoundaryMembers() 1`] = `
[
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "environment=qa,region=region,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "options": [Object], "subnetId": "region-public", "subnetName": "public"} getChildren() 1`] = `
[
  "execution",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "options": [Object], "subnetId": "region-public", "subnetName": "public"} getContext() 1`] = `"subnet=region-public,region=region,account=account,app=test"`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "options": [Object], "subnetId": "region-public", "subnetName": "public"} getParents() 1`] = `
[
  "region",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "options": [Object], "subnetId": "region-public", "subnetName": "public"} getSiblings() 1`] = `
[
  "subnet",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "options": [Object], "subnetId": "region-public", "subnetName": "public"} synth() 1`] = `
{
  "options": {
    "disableSubnetIntraNetwork": false,
    "subnetType": "private",
  },
  "region": {
    "context": "region=region,account=account,app=test",
  },
  "subnetId": "region-public",
  "subnetName": "public",
}
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "regionId": "region"} getAncestors() 1`] = `
[
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "regionId": "region"} getBoundaryMembers() 1`] = `
[
  "region=region,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "environment=qa,region=region,account=account,app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "server=backend,account=account,app=test",
  "filesystem=filesystem,region=region,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "regionId": "region"} getChildren() 1`] = `
[
  "environment",
  "filesystem",
  "subnet",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "regionId": "region"} getContext() 1`] = `"region=region,account=account,app=test"`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "regionId": "region"} getParents() 1`] = `
[
  "account",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "regionId": "region"} getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "regionId": "region"} synth() 1`] = `
{
  "regionId": "region",
}
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serverKey": "backend"} getAncestors() 1`] = `
[
  "server=backend,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serverKey": "backend"} getBoundaryMembers() 1`] = `
[
  "server=backend,account=account,app=test",
  "account=account,app=test",
  "app=test",
  "deployment=v1,server=backend,account=account,app=test",
  "execution=backend-v1-region-qa-public,deployment=v1,server=backend,account=account,app=test,environment=qa,region=region,account=account,app=test,subnet=region-public,region=region,account=account,app=test",
  "subnet=region-public,region=region,account=account,app=test",
  "subnet=region-private,region=region,account=account,app=test",
  "region=region,account=account,app=test",
  "environment=qa,region=region,account=account,app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serverKey": "backend"} getChildren() 1`] = `
[
  "deployment",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serverKey": "backend"} getContext() 1`] = `"server=backend,account=account,app=test"`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serverKey": "backend"} getParents() 1`] = `
[
  "account",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serverKey": "backend"} getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serverKey": "backend"} synth() 1`] = `
{
  "serverKey": "backend",
}
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serviceId": "service"} getAncestors() 1`] = `
[
  "service=service,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serviceId": "service"} getBoundaryMembers() 1`] = `
[
  "service=service,account=account,app=test",
  "account=account,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serviceId": "service"} getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serviceId": "service"} getContext() 1`] = `"service=service,account=account,app=test"`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serviceId": "service"} getParents() 1`] = `
[
  "account",
]
`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serviceId": "service"} getSiblings() 1`] = `[]`;

exports[`Model E2E Test common functions Test {"anchors": [Array], "dependencies": [Array], "serviceId": "service"} synth() 1`] = `"Method not implemented! Use subclass"`;

exports[`Model E2E Test getAncestors() should include parent of parent as ancestors 1`] = `
[
  "environment=env-0,region=region-0,account=account,app=app",
  "region=region-0,account=account,app=app",
  "account=account,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getAncestors() should include sibling dependency as ancestor with explicit behavior 1`] = `
[
  "service=service,account=account,app=app",
  "region=region,account=account,app=app",
  "account=account,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getAncestors() should not include children as ancestor 1`] = `
[
  "region=region-0,account=account,app=app",
  "account=account,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getAncestors() should not include sibling dependency as ancestor without explicit behavior 1`] = `
[
  "service=service,account=account,app=app",
  "account=account,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getAncestors() should not include sibling dependency as ancestor without explicit behavior 2`] = `
[
  "region=region,account=account,app=app",
  "account=account,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should demonstrate how boundaries can explode because of a common model 1`] = `
[
  "region=region-1,account=account,app=test-app",
  "account=account,app=test-app",
  "app=test-app",
  "environment=qa,region=region-1,account=account,app=test-app",
  "region=region-2,account=account,app=test-app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should include models in boundary after they are added as dependents 1`] = `
[
  "region=region,account=account,app=test-app",
  "account=account,app=test-app",
  "app=test-app",
  "subnet=region-subnet,region=region,account=account,app=test-app",
  "execution=server-deployment-region-qa-subnet,deployment=deployment,server=server,account=account,app=test-app,environment=qa,region=region,account=account,app=test-app,subnet=region-subnet,region=region,account=account,app=test-app",
  "environment=qa,region=region,account=account,app=test-app",
  "deployment=deployment,server=server,account=account,app=test-app",
  "server=server,account=account,app=test-app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should include models in boundary after they are added as dependents 2`] = `
[
  "server=server,account=account,app=test-app",
  "account=account,app=test-app",
  "app=test-app",
  "deployment=deployment,server=server,account=account,app=test-app",
  "execution=server-deployment-region-qa-subnet,deployment=deployment,server=server,account=account,app=test-app,environment=qa,region=region,account=account,app=test-app,subnet=region-subnet,region=region,account=account,app=test-app",
  "subnet=region-subnet,region=region,account=account,app=test-app",
  "region=region,account=account,app=test-app",
  "environment=qa,region=region,account=account,app=test-app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should include sibling dependency in boundary 1`] = `
[
  "region=region,account=account,app=app",
  "account=account,app=app",
  "app=app",
  "service=service,account=account,app=app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should include sibling's sibling in boundary 1`] = `
[
  "region=region-1,account=account,app=app",
  "account=account,app=app",
  "app=app",
  "image=imageName:v1,account=account,app=app",
  "region=region-2,account=account,app=app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should not include non-dependents in boundary 1`] = `
[
  "region=region,account=account,app=test-app",
  "account=account,app=test-app",
  "app=test-app",
]
`;
